--- a/style.css
+++ b/style.css
@@ -12,12 +12,6 @@ body {
     overflow: auto;
 }
 
-
-.logo-image {
-    width: 10vh;
-    height: 10vh;
-}
-
 #overlay-canvas {
     position: absolute;
     top: 10;
@@ -129,12 +123,6 @@ input[type="file" i] {
     font-size: 20px;
     font-family:"classic notes";
 }
-
-.logo {
-    display: flex;
-    justify-content: space-around;
-    font-size: 24px;
-}
 @font-face {
     font-family:"classic notes";
     src: url("Classic Notes.ttf") format("truetype");
@@ -151,18 +139,23 @@ input[type="file" i] {
 }
 
 .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     background-size: 200% 200%;
     background-color: white;
-    /* background-color: rgb(83, 83, 83); */
-    padding: 20px;
+    padding: 13px;
     text-align: center;
+    color: #333;
 }
+
 
 .animation-container {
     font-size: 20px;
     width: 95%;
     max-width: 400px;
-    margin: 15px auto 0 auto;
+    margin: 15px auto 15px auto;
     text-align: left;
     font-size: 30px;
     /* font-weight: bold; */
@@ -247,4 +240,25 @@ input[type="file" i] {
 
 .card:hover {
     box-shadow: 0 0 6px 0 #999;
+}
+.second-card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-gap: 20px;
+    padding-left: 20px;
+    max-height: calc(100vh - 100px);
+}
+
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    margin: 0 auto;
+    max-width: 660px;
+}
+
+.card-grid {
+    padding-left: 20px;
+    padding-right: 20px;
 }
