--- a/style.css
+++ b/style.css
@@ -16,16 +16,17 @@ body {
     position: absolute;
     top: 10;
     left: 10;
-    /* opacity: 0.4; */
     pointer-events: none;
 }
 .canvas-space {
     display: flex;
+    flex-direction: column;
 }
 
 .right-section {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
 }
 .drawing-area {
     box-shadow: 0 0 6px 0 #999;
@@ -123,10 +124,15 @@ input[type="file" i] {
     font-size: 20px;
     font-family:"classic notes";
 }
-@font-face {
-    font-family:"classic notes";
-    src: url("Classic Notes.ttf") format("truetype");
+  @font-face {
+    font-family:"Life-Lessons";
+    src: url("Life-Lessons.ttf") format("truetype");
   }
+  @font-face {
+    font-family: "sketch-book";
+    src: url("sketch-book.ttf") format("truetype");
+  }
+
 
 .footer-icons a {
     font-size: 20px;
@@ -152,18 +158,23 @@ input[type="file" i] {
 
 
 .animation-container {
-    font-size: 20px;
     width: 95%;
-    max-width: 400px;
+    max-width: 800px;
     margin: 15px auto 15px auto;
-    text-align: left;
+    text-align: center;
     font-size: 30px;
-    /* font-weight: bold; */
+    font-weight: 700;
     font-family:"classic notes";
 }
 
 #draggable-container {
-    position: fixed;
+    user-select: none;
+    cursor: pointer;
+    touch-action: none;
+    position: absolute;
+    top: 15%;
+    left: 84%;
+    transform: translate(0, 0);
     user-select: none;
     cursor: pointer;
     touch-action: none;
@@ -204,6 +215,7 @@ input[type="file" i] {
         display: none;
     }
 }
+
 @media (min-width: 769px) {
     .right-section {
         flex: 70%;
@@ -212,7 +224,6 @@ input[type="file" i] {
 
 
 
-/* Hide the entire container by default */
 .container.hidden {
     display: none;
 }
@@ -262,3 +273,38 @@ input[type="file" i] {
     padding-left: 20px;
     padding-right: 20px;
 }
+
+
+.font-type {
+    height: 80px;
+    font-family:'Life-Lessons' ;
+    font-size: 50px;
+}
+    .common {
+        cursor: pointer;
+        width: 90vh;
+        transition: font-size 0.3s;
+    }
+    .common:hover {
+        font-size: 20px;
+    }
+
+    .image-grid {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+      }
+  
+      .card {
+        flex: 0 0 calc(12.5% - 10px);
+        margin: 5px;
+        box-sizing: border-box;
+        width: 95px;
+        height: 120px;
+      }
+  
+      .card img {
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+      }
