--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    padding: 0;
     font-family: "classic notes";
 }
 
@@ -138,7 +139,6 @@ input[type="file" i] {
     font-size: 20px;
     text-decoration: none;
     color: black;
-    margin: 0 10px;
 }
 .bold-name:hover {
     color: #1f1e21;
@@ -149,19 +149,16 @@ input[type="file" i] {
     bottom: 0;
     left: 0;
     width: 100%;
-    background-size: 200% 200%;
     background-color: white;
-    padding: 13px;
     text-align: center;
-    color: #333;
 }
 
 
 .animation-container {
-    width: 95%;
-    max-width: 800px;
-    margin: 15px auto 15px auto;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 10px;
     font-size: 30px;
     font-weight: 700;
     font-family:"classic notes";
@@ -172,7 +169,7 @@ input[type="file" i] {
     cursor: pointer;
     touch-action: none;
     position: absolute;
-    top: 15%;
+    top: 17%;
     left: 84%;
     transform: translate(0, 0);
     user-select: none;
@@ -304,7 +301,7 @@ input[type="file" i] {
       }
   
       .card img {
-        width: 40px;
-        height: 40px;
+        width: 100%;
+        height: 100%;
         cursor: pointer;
       }
